--- a/source/_posts/日常/乒乓球.md
+++ b/source/_posts/日常/乒乓球.md
@@ -68,5 +68,25 @@ title:
 ####  拉球注意点
 
 * 两个腿打开幅度大
-* 
+
+
+
+
+
+## 问题汇总
+
+
+
+1. 为什么反手总丢球
+   因为接完球下意识预备动作在正手上，准备下一板正手拉球或者侧身或挡一板正手，反手就成了空当。应该接完球预备动作在反手，并且可以根据情况适当退台
+2. 正手拉球失误总出台原因
+   原因是尽管撞击很充分，但打比赛忘了撞击完要加上手腕，这样撞击完就没弧线，应该撞击完手腕快速摩擦发力向前重心转左腿
+3. 为什么防高调总出台
+   因为主动加摩擦，一带球就飞，应该拍型放平只撞击向前下压，甚至卸力，切莫快带
+4. 为什么正反手转换慢
+   因为击球完动作未还原，还有击球动作太大不易还原，还有击球后重心跑偏了
+   应该平时联系注意动作还原，身体紧凑，动作不易太大
+5. 为什么防御球总卸力
+   因为太着急防御，没看清球，为了接上球加了很多保险，撞击点没找对就加手腕向前兜球，导致击球点没吃住，全靠兜过去
+   应该敢于等，找准击球点，再防御球
 
