--- a/source/_posts/2020/每日一问0330(多线程).md
+++ b/source/_posts/2020/每日一问0330(多线程).md
@@ -57,7 +57,7 @@ synchronized关键字其实是“给某个对象加了把锁”，
 
 #### ThreadLocal 内存泄露问题
 
-􏰛􏱾􏱿使用的 key 为 􏰺 ThreadLocal 的弱引用􏼏􏱿,而􏲻 value是强引用。所以如果ThreadLocal没有被外部强引用的情况下，在垃圾回收的时候，key 会被清理掉，而value 不会被清理掉。这样一来,ThreadLocalMap 中出现了key 为null 的Entry。加入没有任何措施的话，value 永远不会被GC回收，这个时候会产生内存泄露。
+使用的 key 为 ThreadLocal 的弱引用,而value是强引用。所以如果ThreadLocal没有被外部强引用的情况下，在垃圾回收的时候，key 会被清理掉，而value 不会被清理掉。这样一来,ThreadLocalMap 中出现了key 为null 的Entry。加入没有任何措施的话，value 永远不会被GC回收，这个时候会产生内存泄露。
 最好使用完ThreadLocal后手动调用remove()方法。
 
 ## 如何创建线程池
