--- a/source/_posts/2020/每日一问0330(多线程).md
+++ b/source/_posts/2020/每日一问0330(多线程).md
@@ -146,59 +146,7 @@ public final void acquire(int arg) {
 
 公平和非公平锁的队列都基于锁内部维护的一个双向链表，表结点Node的值就是每一个请求当前锁的线程。公平锁则在于每次都是依次从队首取值。
 锁的实现方式是基于如下几点：
-表结点Node和状态state的volatile关
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-键字。
+表结点Node和状态state的volatile关键字。
 sum.misc.Unsafe.compareAndSet的原子操作(见附录)。
 
 非公平锁：
