--- a/source/_posts/小程序自研/前期分析.md
+++ b/source/_posts/小程序自研/前期分析.md
@@ -4,7 +4,7 @@ title:
 
 # 前期分析
 
-目标：
+**目标**：
 
 通过这个小项目当作一个启动项，完成初步的自研项目的全部流程，
 
@@ -15,6 +15,14 @@ title:
 二期打造乒乓社区。
 
 三期视频点评打赏
+
+**受众特点**
+
+年轻球员 
+
+爱好热爱乒乓球
+
+想要技术提升的球员
 
 # 乒乓约球小程序
 ## 资金成本调研
