--- a/source/_posts/小程序自研/需求分析.md
+++ b/source/_posts/小程序自研/需求分析.md
@@ -20,21 +20,21 @@ title:
 
 ## 项目启动实际情况具体分析
 
-目前属于初步尝试阶段，人员不具备独立创业资历，投入成本和精力有限，在这个非常时期，结合实际情况需要有个过渡的过程；
-
-**目标**：
-
-* 通过这个小项目当作一个启动项，完成初步的自研项目的全部流程，积累项目经验。
-
-* 项目中方便规范化邀请乒乓球员约球流程，规范化管理起来 ，积累用户量，为将来产品打好群众基础。
-
-* 引入广告流量，产生利润。实现投入与产出平衡，为了平稳的进入下一个阶段，实现更远大的目标。
+目前属于初步尝试阶段，人员不具备独立创业资历，投入成本和精力有限，在这个非常时期，结合实际情况需要有个过渡的过程
 
 
 
 ****
 
 # 一期
+
+### 目标：
+
+* 通过这个小项目当作一个启动项，完成初步的自研项目的全部流程，积累项目经验。
+
+* 项目中方便规范化邀请乒乓球员约球流程，规范化管理起来 ，积累用户量，为将来产品打好群众基础。
+
+* 引入广告流量，产生利润。实现投入与产出平衡，为了平稳的进入下一个阶段，实现更远大的目标。
 
 **目标用户群体**
 
@@ -44,9 +44,11 @@ title:
 * 流动人口
 * 想要技术提升
 
-### 用户痛点- 
+###  待解决问题
 
-* 找不到打球人  
+####  用户痛点
+
+* 找不到合适的球友 
   * 按年龄
     * 年轻人 （我）
     * 老年人
@@ -69,7 +71,7 @@ title:
   * 环境
   * 费用
 
-* 找不到合适的时间
+* 约不到合适的时间
   * 日期
     * 工作日	
     * 周末
@@ -77,17 +79,36 @@ title:
     * 长期
     * 临时
   
-* 原有的软件使用不方便
+#### 产品痛点
 
-  * 需下载
+* 需下载
+* 功能臃肿
+
   * 打开找不到自己想要的功能
+  * 功能操作不人性化
+* 用户量小
+
   * 发了没人理会
   * 同时间软件上没有合适的人
-  ### 解决需求
+* 可玩性差，缺少趣味性
+  
+  * 用户使用活跃度不高
+  * 用户留存时间短
+* 用户缺少使用互联网意识
+* 用户私下约球更方便
+* 约球熟人更多
+### 解决需求
 
-  1. 提供列表和匹配 两种查找用户的方式，优先使用匹配方式
+#### 功能性
 
-     1.1  匹配：可参考游戏中“匹配”的方式设计一款产品，用户之间 系统匹配，即时通知到两端，匹配直接推送给合适的人，匹配成功后 推送给两端的用户
+##### 提供地图，列表和匹配 三种种查找用户的方式，优先使用匹配方式
+
+1. 地图: 在地图上撒点的方式展示用户发布的打球信息，如下图
+
+![image-20230214100251610](../../ImgSource/image-20230214100251610.png)
+
+2. 列表:  列表展示用户约球信息，可支持 按距离，按技术水平，按打球风格，按球友风格，按年龄 筛选 合适的球友
+3. 匹配：可参考游戏中“匹配”的方式设计一款产品，用户之间 系统匹配，即时通知到两端，匹配直接推送给合适的人，匹配成功后 推送给两端的用户
 
   ```mermaid
   flowchart TB
@@ -104,42 +125,72 @@ title:
   k -->|加入等待匹配队列|等待匹配队列-->|找到符合条件非超时用户B|B用户收到匹配-->|选择是否接受|f{是否接受匹配}
   
   f-->|是| 通知用户A-->匹配成功
-  f-->|否| 用户A等待匹配 -->|加入等待匹配队列|等待匹配队列
+f-->|否| 用户A等待匹配 -->|加入等待匹配队列|等待匹配队列
   
   
   
   ```
 
-2. 增加找球馆功能
+##### 增加找球馆功能
 
-   1. 根据 距离,价格,营业时间 推荐 附近室内球馆
-   2. 根据距离 天气，温度，风力 推荐室外场地 
+1. 根据 距离,价格,营业时间 推荐 附近室内球馆
+2. 根据距离 天气，温度，风力 推荐室外场地 
 
-3. 增加打球水平级别评定功能
 
-   1. 积分赛积分
+#### 趣味性
 
-      1. 上传视频-> 专业人士评定（模拟积分）
-   
-   2. 基本功等级
+##### 增加乒乓球周边
 
-   3. 打球能力光环
+ 目的是乒乓结合生活，只有乒乓或只有互联网会太单调
 
-      1. 正手拉球
+* 乒乓专属头像
+* 乒乓海报
+* 乒乓锻炼小游戏
+* 乒乓人物皮肤？
+* 乒乓搞笑视频
+* 
+
+#### 技能性
+##### 增加打球水平级别评定功能
+
+1. 积分赛积分
+
+   1. 上传视频-> 专业人士评定（模拟积分）
+
+2. 基本功等级
+
+3. 打球能力光环
+
+   1. 正手拉球
    2. 反手拉球
-      3. 搓球
-      4. 防守能力
-      5. 推挡能力 	
-   
-      
-   
-      
-   
-      
+   3. 搓球
+   4. 防守能力
+   5. 推挡能力 	
+
+##### 增加乒乓日记
+
+* 乒乓技能打卡
+
+  。。。待补充
+
+##### 增加乒乓技能树
+
+* 技能树地图
+* 技能树关卡
+
+ ##### 增加乒乓专项技能主题园
+
+* 用户专项技能日记
+* 专项技能教学视频
+* 用户专项技能训练上传指导
+
 
 ### 模块设计
 
 1. 个人信息管理
+
+   (名称，电话，微信，)
+
 2. 约球面板
 
 ​    （时间，地点，）
