--- a/source/_posts/乒乓笔记/20230330.md
+++ b/source/_posts/乒乓笔记/20230330.md
@@ -1,3 +1,9 @@
+---
+title:
+---
+
+
+
 # 20230330
 
 ## 正手拉球问题修正
@@ -53,7 +59,7 @@
 
 ## 自己调整
 
-**击球后仰问题**
+#### 击球后仰问题
 
 问题描述：击球时，身体重心在原地或者身体后仰
 
@@ -61,7 +67,7 @@
 
 解决:  重心压在右腿上，准备击球时蹬腿，由身体带动手臂向前揮，击球前重心还在右腿，不要释放太多，手臂和身体相对固定，转腰较少，**击球点要往后放，在身体侧方**，击球的过程开始转换重心往左腿，这样击球前 动作相对稳定 失误率小，击球中后再转移释放重心身体就会前倾一些，另外，还要有意识的身体向前顶上半身不要抬起来。
 
-**脚没踩实问题**
+#### 脚没踩实问题
 
 问题描述: 脚没踩实，没有蹬地发力
 
@@ -73,7 +79,7 @@
 2. 球落点预判问题: 参考[ 重心转换-球落点预判]( # 重心转换)
 3. 身体还原慢问题: 参考[重心转换-身体还原](# 重心转换)
 
-**右脚找球问题**
+#### 右脚找球问题
 
 问题描述:  右脚蹬地，右脚找球，等于重心从右到右
 
@@ -81,7 +87,7 @@
 
 解决: 参考[ 重心转换-球落点预判]( # 重心转换)
 
-**身体倾斜问题**
+#### 身体倾斜问题
 
 问题描述: 正手攻球击球时/后身体倾斜了
 
@@ -95,7 +101,7 @@
    2.  身体累的时候，不要继续，掌握框架不在于多练习，而在于理解其中的因果。
    3. 以前的击球习惯 这是惯性问题，需要多加练习，**有意识的控制**
 
-**身体晃动问题**
+#### 身体晃动问题
 
 问题描述: 正手攻球前后上半身晃动厉害
 
@@ -113,7 +119,7 @@
 
 拍型与来球平行 有一定倾斜角度，身体带着手臂撞击球. 这样既有撞击，转胯那一下 也有弧线的惯性。
 
-**大臂向前特别多的问题**
+#### 大臂向前特别多的问题
 
 问题描述: 正手攻球时，大臂向前挥动的太多，击球点太靠身体测前方了，提前击球了，用手去找球击球，没有和身体固定
 
@@ -123,7 +129,7 @@
  	2. 击球时机往后放放 也在身体一侧
  	3. 击球前不要提前挥拍，只是身体带着手臂往前迎球，和身体固定
 
-**正反手转换换握太多的问题**
+#### 正反手转换换握太多的问题
 
 描述: 比赛时，打完反手 换到正手的时候，握拍方式要调整的太多
 
@@ -131,7 +137,7 @@
 
 解决: 理解正确的击球方式，有意识的调整正手攻球握拍方式  参考 （击球兜球问题-解决）
 
-**正手收力太早问题**
+#### 正手收力太早问题
 
 描述: 正手攻球击球完，动作没做完就提前收了 
 
