--- a/source/_posts/日常/威海消费.md
+++ b/source/_posts/日常/威海消费.md
@@ -1,5 +1,14 @@
 ---
-title:
+title: 
+
+category: 日常
+tags:
+  - 旅行
+  - 消费
+keywords: 博客文章密码
+password: 911204
+abstract: 密码：我生日
+message:  输入密码，查看文章
 ---
 # 威海消费
 
