--- a/source/_posts/乒乓笔记/总结_20230412.md
+++ b/source/_posts/乒乓笔记/总结_20230412.md
@@ -2,6 +2,7 @@
 title: 
 tags:
   - 乒乓
+
 ---
 
 <script type="text/javascript" src="https://web-1253780623.cos.ap-shanghai.myqcloud.com/zhf-blog/js/ckplayer.js"></script>  
@@ -17,4 +18,44 @@ tags:
 <script> 
 	gotoplayer("../../ImgSource/a.mp4");
 </script>
+## 问题
 
+1. 对方批长 判断不清方向，从而不敢起手
+2. 侧身太慢
+3. 相持到第三板后没有连续
+
+## 心得
+
+正手心得：
+
+1. 上松下紧： 
+
+   下紧：说的是脚上要快，不断地颠，迅速蓄力，脚蹬地踩实
+
+   上松: 说的是上半身放松，手臂由身体带动，而不是手臂僵，自己动
+
+2. 跨要顶出去
+
+3. 重心要转到左腿上
+
+4. 右腿打开，向外跨一步，同时形成准备动作。
+
+反手心得：
+
+1. 反手挡球，不要向前撕，动作尽量小，找位，重心压住，挡就行
+2. 反手撕和反手抽的区别，反手撕球讲究借力打力，一定要借助对方的力带回去，反手抽 需要主动发力到球上，来抵消球的旋转
+
+正反手心得：
+
+1. 发下旋短球，发完颠一步，手拿在台子上，不着急转身拉手，对面摆短就上步，劈长就抢点拉前点
+2. 挥拍过程时刻注意着拍形，要有**击球的恰当性**，不能因为放松导致拍子晃动
+
+## 训练
+
+1. 正手起下旋，反手接攻球
+2. 反手起下旋，反手接攻球
+3. 反手两拍转正手两拍再转反手，
+
+## 改善
+
+1. 抢点的问题
