--- a/source/_posts/小程序自研/需求分析.md
+++ b/source/_posts/小程序自研/需求分析.md
@@ -3,6 +3,10 @@ title:
 tags:
   - 乒乓
   - 小程序自研
+plugins:
+  mermaid: # Mermaid JS
+    enable: true # enable mermaid or not
+    version: "9.3.0" # default v9.3.0
 ---
 
 # 需求分析
@@ -111,10 +115,19 @@ tags:
 ![image-20230214100251610](../../ImgSource/image-20230214100251610.png)
 
 2. 列表:  列表展示用户约球信息，可支持 按距离，按技术水平，按打球风格，按球友风格，按年龄 筛选 合适的球友
-3. 匹配：可参考游戏中“匹配”的方式设计一款产品，用户之间 系统匹配，即时通知到两端，匹配直接推送给合适的人，匹配成功后 推送给两端的用户
+
+```mermaid
+graph TD;   
+A-->B;   
+A-->C;   
+B-->D;   
+C-->D;
+```
+
+2. 匹配：可参考游戏中“匹配”的方式设计一款产品，用户之间 系统匹配，即时通知到两端，匹配直接推送给合适的人，匹配成功后 推送给两端的用户
 
   ```mermaid
-  flowchart TB
+  graph TB
   k[B用户开启匹配]
   l[用户A]
   l--> |填写用户基本信息,打球信息,级别和需求,可匹配时间|可发起匹配用户
