--- a/source/_posts/快速通道/好玩的地址.md
+++ b/source/_posts/快速通道/好玩的地址.md
@@ -11,5 +11,8 @@ title:
 
 # 
 
+[**硬地骇客**](https://www.xiaoyuzhoufm.com/podcast/640ee2438be5d40013fe4a87)
+
 [领域驱动设计在互联网业务开发中的实践](https://tech.meituan.com/2017/12/22/ddd-in-practice.html)
 
+敲代码 音乐： https://coderadio.freecodecamp.org/
