--- a/source/_posts/面试/面试.md
+++ b/source/_posts/面试/面试.md
@@ -77,4 +77,25 @@
 
 * 模拟面试
 
+### 时间节点
+
+截止日：8月16日
+
+
+
+周末： 共计8天
+
+* 7月22，7月23，
+* 7月29，7月30
+* 8月5，8月6
+* 8月12,8月13
+
+工作日：17天
+
+
+
+
+
+
+
    
