--- a/source/_posts/乒乓笔记/总结_20230320.md
+++ b/source/_posts/乒乓笔记/总结_20230320.md
@@ -22,7 +22,7 @@ tags:
 
 * 攻球 大臂太开，调整: 应该夹紧一些
 
-* 发力的时候小臂是为轴展开的，有点拉或者撕的动作，就导致回球不稳，击球不实， 调整: 应该击球手臂往前送，找撞击的感觉，这样出手感。
+* 发力的时候小臂是以肘为轴展开的，有点拉或者撕的动作，就导致回球不稳，击球不实， 调整: 应该击球手臂往前送，找撞击的感觉，这样出手感。
 
 
 
