--- a/source/_posts/小程序自研/小程序版本/1.0.0.2.md
+++ b/source/_posts/小程序自研/小程序版本/1.0.0.2.md
@@ -41,6 +41,30 @@ tags:
 
 ### 约球匹配功能设计
 
+  约球属性：
+
+* 约球发起人
+
+  * 发起人个人信息
+    * 年龄
+    * 性别
+    * 打法
+
+* 约球时间
+
+  * 时间范围
+  * 周期性，临时性
+
+* 约球地点
+
+  * 室内室外
+
+* 约球打法
+
+* 约球目的
+
+  
+
    时间设计：
 
 * 自定义时间
@@ -49,16 +73,47 @@ tags:
   * 选择时段
 
   
+  
+* 匹配设计
+  
+  * 匹配算法
+  * 标签权值
+      * 标签类别
+      * 打法
+        * 胶皮类型
+        * 底板类型
+          * 动作标准程度
+        * 人品
+          * 性格好
+          * 开朗
+          * 已沟通
+          * 颜值高
+          * 大方
+        * 目的
+          * 练球
+          * 比赛
+          * 锻炼身体
+          * 交友
+        * 
+  
+  
+  
+  
+  
+  流程设计
+  
+  发起约球->匹配->通知->约成->反馈
+  
+  
 
 
 
 
 
 ### 约球筛选功能设计
-### 自动成局功能设计
-### 约球玩法标签功能：正手拉球30板，正手两点练习50球，反手起下旋30次， 三局两胜制开5局， 
+###  ，约球玩法标签功能：正手拉球30板，正手两点练习50球，反手起下旋30次， 三局两胜制开5局， 
 
-
+![未命名文件](../../../ImgSource/%E6%9C%AA%E5%91%BD%E5%90%8D%E6%96%87%E4%BB%B6.jpg)
 
 ## 版本功能
 
