--- a/source/_posts/面试/每日一问0714(面试词汇).md
+++ b/source/_posts/面试/每日一问0714(面试词汇).md
@@ -11,6 +11,8 @@ tags:
 
 千方科技，智道网联科技(北京)有限公司
 
+小红唇  
+
 ## 工作内容
 
 云平台， kubernetes , 公有云 私有云，多云迁移工作
@@ -37,13 +39,13 @@ harbor 重写二次开发
 
 ABTest实验平台，APM性能检测平台。
 
-数字孪生
+数字孪生 ，iot  开放平台
 
 核心功能开发（抽奖算法，）
 
 
 
-
+进销存 ，OMS
 
 ### 临时
 
@@ -136,6 +138,8 @@ EMQ
 
 
 开发语言 ：java,javascript,shell,python,
+
+
 
 
 
