--- a/source/_posts/面试/简历备份.md
+++ b/source/_posts/面试/简历备份.md
@@ -17,12 +17,13 @@ tags:
 * 熟悉设计模式，微服务架构，devops ，低代码，关系型数据库，springboot,springcloud,nosql，ELK，mq，redis，docker，k8s,linux ，版本管理工具，bug 追踪，自动化测试等。容易接受新事物，乐于沟通，注重团队合作，学习能力强。擅长技术架构，devops ，技术管理等
 * 有职业精神，工作务实喜欢挑战，良好跨部门沟通能力，结果导向责任心强，执行力强。熟悉后端开发、应用架构、运维、测试、大数据等全栈技术；不脱离一线的编码与设计；有完整0-1、1-100的产研(110+人)团队成功管理经验, 对产研的交付质量、效率与效果负责；有复杂系统拆分与重构的成功经验，擅长大型复杂系统设计与实施；Java、Go 等多语言开发经验
 * 10+的互联网和AI行业工作经验，目标和结果导向风格，DDD思想驱动，OKR管理手段，在AIoT，AIOS领域有过实际建设和架构设计经验（CV，NLP工程化），对边缘云，边缘计算也有过探索和实践。熟悉SAAS，PaaS平台建设，SpringCloud微服务和中台化架构体系，熟悉分布式，高并发, 多地部署方案设计，熟悉数据湖和数据仓库等大数据体系建设，及Devops方面体系规划。 垂直规划智能座舱，智慧酒店，智能家居等AI的云/边/端解决方案。
+* 主要从事过电商，企业服务，物联网，支付，电信和数字化转型等行业。精通Java技术体系及开源框架；熟悉微服务/异步框架/消息中间件/缓存/数据库等等；在系统，业务和技术架构方面有较深造诣，丰富的(多次0到1)中大型规模系统落地，调优经验；在数据中台，业务中台成功建设经验。多年团队管理经验(多次0到1)。自驱力强，极强业务理解和问题解决能力，战略规划，跨团队协同。
 
 
 
 ## 项目介绍：
 
-* 支撑云原生相关技术的落地工作。负责服务网格在百度内部的落地，大幅提升核心链路的可用性和系统整体容灾、防雪崩能力，解锁服务可观测，自动止损，容量探测等高级场景能力， 并为微服务提供丰富的流量治理能力。承载众多核心业务（大搜、地图、FEED 、商业）的线上数万实例近千亿流量接入。后期负责云原生底座私有化工作，即CCE智算版——一套轻量化部署的AI异构计算平台，智算版服务了众多的内外部客户：不仅作为独立产品ToB售卖，还作为百度厂内其他产品的底座进行支持ToB输出，项目年收入1500W+。
+* **支撑云原生相关技术的落地工作**。负责服务网格在百度内部的落地，**大幅提升核心链路的可用性和系统整体容灾、防雪崩能力，解锁服务可观测，自动止损，容量探测等高级场景能力， 并为微服务提供丰富的流量治理能力**。承载众多核心业务（大搜、地图、FEED 、商业）的**线上数万实例近千亿流量接入**。后期负责云原生底座私有化工作，即CCE智算版——一套轻量化部署的AI异构计算平台，智算版服务了众多的内外部客户：不仅作为独立产品ToB售卖，还作为百度厂内其他产品的底座进行支持ToB输出，项目年收入1500W+。
 * 负责Java方向基础架构工作，以及若干业务系统的设计、开发和日常管理工作。开发的基础库包括：命名服务、RPC客户端、日志库等。
 * 负责移动广告引擎、平台相关项目：AdExchange、DSP 、广告 SDK 等的设计与开发。
 * 负责百度团购、横向的基础支付平台的研发工作。以及在贴吧基础架构部负责性能和稳定性方向的工作。
@@ -31,13 +32,11 @@ tags:
 
 * CCE智算版是一套轻量化部署的AI异构计算平台，包括异构资源调度、GPU容器虚拟化、AI任务管理、训练、推理和数据集加速等能力，并可按需选配AI存储和RDMA网络等模块。智算版服务了众多的内外部客户：不仅作为独立产品ToB售卖，还作为百度厂内其他产品的底座进行支持ToB输出。 其中不泛以智算版作为底座来支持大模型平台和AI中台私有化，包括软硬一体化输出基础硬件运维、中间件托管部署、CPU/GPU算力集群纳管、业务工作负载容器化部署、推理任务部署伸缩、训练任务部署和容错、AI基础架构软件和任务可观测能力。以快速满足客户需求迭代、产品技术栈统一、内部打磨产品赋能外部客户等多维度获得收益，项目年收入1500W+。
 
-* CCE智算版是一套轻量化部署的AI异构计算平台，包括异构资源调度、GPU容器虚拟化、AI任务管理、训练、推理和数据集加速等能力，并可按需选配AI存储和RDMA网络等模块。智算版服务了众多的内外部客户：不仅作为独立产品ToB售卖，还作为百度厂内其他产品的底座进行支持ToB输出。 其中不泛以智算版作为底座来支持大模型平台和AI中台私有化，包括软硬一体化输出基础硬件运维、中间件托管部署、CPU/GPU算力集群纳管、业务工作负载容器化部署、推理任务部署伸缩、训练任务部署和容错、AI基础架构软件和任务可观测能力。以快速满足客户需求迭代、产品技术栈统一、内部打磨产品赋能外部客户等多维度获得收益，项目年收入1500W+。
-
 * \1. 提升研发效率： 内核收敛到bRPC内部，策略开发可复用，迭代效率提升一倍 同时支持Proxyless和Proxy两种代理模式 40核物理机全量编译2分钟，修改一行代码增量编译10秒钟 全量单测5分钟内执行完，支持端到端测试用例 2. 提升性能与稳定性： 支持aarch64架构 支持LTO编译优化 优化核心流量转发路径减少指令cache miss，替换更高性能的基础库，资源使用率和延迟均得到优化 支持Unix Domain Socket，绕过TCP/IP协议栈，延迟优化20% 3. 未来准备将bRPC sidecar开源，提升技术影响力 百度FEED线上覆盖实例数达到2W+，预计2023年Q3全面将服务网格数据面由Envoy替换为bRPC sidecar。
 
 * 基于NamingService+loopback IP的流量劫持，相比社区iptables方案性能更好，且可支持服务治理参数透明劫持 协议通用代理架构，新协议开发成本减少5倍以上 Envoy转发性能优化，利用bRPC底层高性能网格和IO机制对Envoy性能进行优化，转发提升性能2倍以上 代理架构简化，支持client-side代理模式，比社区both-side模式资源开销和延迟减半，还支持Proxyless模式 Istio控制面性能优化，支撑十万级实例规模 高级服务治理策略，包括错误码调权、动态备份请求等，大幅提升了服务可用性 个人于2021年7月百度技术沙龙发表《服务网格在百度核心业务大规模实践》演讲，线上线下观众近千人。文章被InfoQ等多家媒体收录。
 
-* 百度内部大多数服务已经微服务化，通过RPC框架（bRPC、RAL、UB等）来实现服务与服务之间的通信。但RPC框架存在以下问题： 1. 服务治理策略重复开发：由于每个语言有不同的框架，有的语言甚至有多个框架，每个框架都需要重复开发如超时重试、服务发现、负载均衡、限流熔断等服务治理策略 2. 框架升级困难：因为框架被联编到业务进程中，框架升级需要业务配合升级，但实践证明往往很难推动所有业务升级老版本框架 3. 跨框架调用无法有效联动：如分布式Tracing、全链路灰度等治理能力需要上下游框架之间遵守相同的协议和行为模式但不同框架的行为很难统一 4. 配置管理分散：服务间拓扑关系和各种治理策略配置分散在各处（如写死的代码，或者本地配置文件），无法统一管理 百度服务网格作为第二代微服务方案，解决了上述问题： 1. 建立统一数据平面，将服务治理能力抽取到独立的Sidecar进程，从而实现语言无关、框架无关，并可以独立于业务进程进行升级 2. 建立统一控制平面，统一管理管理服务间拓扑关系和各种治理策略配置，并向数据面下发这些配置 3. 百度服务网格基于开源的Istio+Envoy方案，做了大量改进： 基于NamingService+loopback IP的流量劫持，相比社区iptables方案，性能更好，且可支持服务治理参数透明劫持 协议通用代理架构，使dubbo协议复用大量http协议的治理策略，新协议开发成本减少5倍以上 Envoy转发性能优化，利用bRPC底层高性能网格和IO机制对Envoy性能进行优化，转发提升性能2倍以上 代理架构简化，支持client-side代理模式，比社区both-side模式资源开销和延迟减半，还支持Proxyless模式 Istio控制面性能优化，支撑十万级实例规模 高级服务治理策略，包括错误码调权、动态备份请求等，大幅提升了服务可用性 2021年7月百度技术沙龙发表《服务网格在百度核心业务大规模实践》演讲，线上线下观众近千人。文章被InfoQ等多家媒体收录。
+* 百度内部大多数服务已经微服务化，通过RPC框架（bRPC、RAL、UB等）来实现服务与服务之间的通信。但RPC框架存在以下问题： 1. 服务治理策略重复开发：由于每个语言有不同的框架，有的语言甚至有多个框架，每个框架都需要重复开发如**超时重试、服务发现、负载均衡、限流熔断等服务治理策略** 2. 框架升级困难：因为框架被联编到业务进程中，框架升级需要业务配合升级，但实践证明往往很难推动所有业务升级老版本框架 3. 跨框架调用无法有效联动：如分布式Tracing、全链路灰度等治理能力需要上下游框架之间遵守相同的协议和行为模式但不同框架的行为很难统一 4. 配置管理分散：服务间拓扑关系和各种治理策略配置分散在各处（如写死的代码，或者本地配置文件），无法统一管理 百度服务网格作为第二代微服务方案，解决了上述问题： 1. 建立统一数据平面，将服务治理能力抽取到独立的Sidecar进程，从而实现语言无关、框架无关，并可以独立于业务进程进行升级 2. 建立统一控制平面，统一管理管理服务间拓扑关系和各种治理策略配置，并向数据面下发这些配置 3. 百度服务网格基于开源的Istio+Envoy方案，做了大量改进： 基于NamingService+loopback IP的流量劫持，相比社区iptables方案，性能更好，且可支持服务治理参数透明劫持 协议通用代理架构，使dubbo协议复用大量http协议的治理策略，新协议开发成本减少5倍以上 Envoy转发性能优化，利用bRPC底层高性能网格和IO机制对Envoy性能进行优化，转发提升性能2倍以上 代理架构简化，支持client-side代理模式，比社区both-side模式资源开销和延迟减半，还支持Proxyless模式 Istio控制面性能优化，**支撑十万级实例规模 高级服务治理策略，包括错误码调权、动态备份请求等**，大幅提升了服务可用性 2021年7月百度技术沙龙发表《服务网格在百度核心业务大规模实践》演讲，线上线下观众近千人。文章被InfoQ等多家媒体收录。
 
 * 业绩：
 
@@ -53,9 +52,7 @@ tags:
 
 4.
 
-* 1、 完成架构升级，系统可承载亿级 PV、100万级并发等高并发，并整体性能提升10倍以上 2、 全面负责研发团队人才梯度团队建设及团队执行力提升，构建高效的团队；连续2年交付无延期 3、 基于 SpringCloud、Gin 基础框架，提升复用性；基于 Nacos、Pinpoint、Zabbix、ELK 等服务治理 4、 Devops 规划与落地(Jenkins、Sonar、Gitlab、Nexus、Ansible等)、基于K8S容器化云原生改造 5、 C端营销体系搭建支撑公司的业务发展战略；交易中台业务系统支撑多渠道收单； 6、 基于机器学习搜索推荐落地；基于图计算的流量识别与产品优化； 7、 理解 CEO 的业务发展战略，负责产研体系统匹配公司业务发展；
-
-业绩：
+* 1、**完成架构升级，系统可承载亿级 PV、100万级并发等高并发，并整体性能提升10倍以上**   2、 全面负责研发团队人才梯度团队建设及团队执行力提升，构建高效的团队；连续2年交付无延期 3、 基于 SpringCloud、Gin 基础框架，提升复用性；基于 **Nacos、Pinpoint、Zabbix、ELK 等服务治理 ** 4、 Devops 规划与落地(Jenkins、Sonar、Gitlab、Nexus、Ansible等)、基于K8S容器化云原生改造 5、 C端营销体系搭建支撑公司的业务发展战略；交易中台业务系统支撑多渠道收单； 6、 基于机器学习搜索推荐落地；基于图计算的流量识别与产品优化； 7、 理解 CEO 的业务发展战略，负责产研体系统匹配公司业务发展；
 
 负责通用支付、营销平台的设计与开发，并负责保障系统的性能与稳定性，提升支付成功率、降低掉单率等，以确保可以为产品线提供更坚实可靠的服务。2014年1月，由于在跨团队积极合作方面杰出的表现，荣获第一季百度最佳合伙人，是公司对自己的一份相当的重要的肯定。期间还因程序质量颇佳，程序Bug数极少，多次获得LBS最佳质量奖。
 
@@ -69,7 +66,17 @@ tags:
 
   1、 portal 组件开发、技术支持等工作；及时向领导汇报个人工作及任务进展情况！ 2、 云南数据仓库模型，编写 SQL及 tcl 进行数据的汇总；布署前端系统的稳定运行！ 3、 在云南数据仓库模型重建保证前端系统的稳定运行！
 
+* 负责从0到1建设恒生活技术平台体系
 
+* ；支撑集团业务500亿+的 GMV
+
+* 通过技术和业务中台架构方案把会员体系打造成高性能，高可用的开放平台。比如核心服务TPS从8K提升至4W，且支撑40亿级用户能力。保障业务运营需求。
+
+* 2.引入新技术：在实际业务中引入图数据库，实现用户-交易-商品链路知识图谱; 引入和推广mycat数据库集群方案，在很多系统应用，比如助力鲸币系统TPS达到10W+
+
+* 3.主持新系统：从0-1设计和落地蓝海(物联网)开放平台核心系统(账户，交易等等)，把全国广场物联网业务中台化，支撑业务对外拓展 
+
+* 4.重大项目推进:采用分库分表和mycat集群方案实现会员平台系统扩容和数据迁移，提升系统性能和容量10倍+，保障业务发展
 
 
 
@@ -92,16 +99,26 @@ tags:
   1、负责项目技术架构搭建，项目研发过程管理、项目成本评估等 2、负责功能模块设计，拆分，程序设计，工作分配，研发计划及跟进，日常问题处理等。 3、负责项目过程文档编写整理，如概要设计，详细设计，开发文档，测试文档等
 
 * 1、 全面负责公司前后端、测试、运维、架构等整体研发的管理、对产研 OKR 负责； 2、 依据公司的商业战略目标，负责编制技术经营计划及系统技术落地；对整体系统的稳定性负责 3、 负责应用级架构(基础框架)的编码与演进 4、 负责整体技术规划，架构演进路线及实施 5、 负责订单、帐户、支付、库存、价格、活动、用户、供应商、物流、仓储等2C2B系统架构与落地
+
 * 1、完成 CRM中5个子系统转换成以 SpringCloud 为基础的微服务架构 2、完成 Mysql至 Elasticsearch 异构数据库同步组件的开发,查询性能5s提升至100ms 3、完成基于 Pinpoint APM 监控系统的构建与分享，对接告警系统
+
 * 负责智能座舱云/边/端各系统生态规划，以及整合建设。 负责平台化规划设计，闭环的端云产研架构和协同机制，不限于 sdk ，技能制作，数据回流，数据标注，模型训练等平台。 负责技术评估和选型。 管理方面： 负责平台规划，任务分解、产研测团队分配，以及 roadmap 排期，推动交付。 对外负责推进 POC 产研规划，对接 OEM 厂商技术方案，对内协调和整合跨团队产研规划和进度。
+
 * 参与 ASR、NLP、TTS 等语音链路设计和技术评审 负责 NLP 链路部分协议，和部分编码工作 负责智能座舱语音工程化，产品化，平台化的技术架构设计，以及建设工作 负责与座舱终端语音 OS 系统端云协同机制设计，及参与和达摩院产品的共建协调、设计工作 负责整合部分智能座舱端云各系统一体化规划设计和推动工作。 管理方向： 负责产研测任务分解，排期，推动 负责跨部门资源协调，排期
+
 * 负责 AI 生态开放 SaaS和 PaaS 平台规划和设计，以及支持智能家居，智慧酒店等智能设备/芯片的垂直行业方案架构 负责 AI 基础语音、视觉能力、多模态架构规划设计，不限自然语言相关 NLP ，和人脸/绘本识别链路 负责智能语音对话管理 DM 技术体系架构，和数据结构设计 负责规划微服务、中台化、平台化建设（包括业务中台，数据中台，技术中台，安全中台等） 负责边缘云计算和公有云平台架构设计和系统建设 负责数据湖和数据仓库的规划设计 负责产品团队管理，产品蓝图评审，负责技术选型和架构评审 参与 Devops 和服务治理体系规划和建设 管理方向： 负责年度资源预算，和目标规划，以及年中/终汇报工作 负责人员招聘 参与公司对外 OpenDay 对外活动的平台宣讲工作 过往涉及技术： springcloud 微服务体系, netty elasticsearch，redis, nginx,lua,protobuffer, flume, kafka, hadoop,hive,hbase,spark,eleasticsearch， jenkins，docker，k8s等。
+
 * 全面负责智能金融系列产品定位，规划和设计以及平台架构和技术架构设计，包括：智能机器人/智能客服/客群监控等 负责协调智能产品的生产工厂生产以及相关软服务提供商的商务合作，包括技术对接机制制定 负责大数据产品定位分析，负责产品需求，规划 负责技术选型，技术架构设计，核心数据协议和实现机制设计 设计可视化系统与大数据协作机制和部分技术实现 推荐引擎系统和用户画像系统架构设计，及部分技术研发 负责大数据团队组建，管理，推进产品和业务部门商务和业务产品技术对接 负责团队人员规划、成本预算
+
 * 对公司产品 App Store 多平台建设( pc web, phone. smart TV) , 需求，技术，对外合作的整体负责 对外负责与台湾合作伙伴对产品定位，需求，及实现机制确定 ，及实施进度推进 全面内负责开发平台架构搭建，业务模块切分及核心机制的代码实现，开发人员任务分配 对 SERVER, 移动终端及运营团队组建和管理，及产品的规划设计，实施 协调产品团队 prototype 设计, 包括智能手机平台，及 smart TV 对商务部门提供技术咨询支持 及商谈第三方合作， 软硬件设备采购等 系统逻辑架构，物理架构设计和实施， 下属人数：8人 汇报对象：总裁 离职原因：需求长久发展平台 主要业绩： 打造产品统一多平台展现均已上线 创新为第三方建设 App Store 机制 其中手机，及 SMART TV 均已实现与第三方合作
 
-## 
+* 通用的横向的支付营销平台，为全公司内部的各产品线提供支付能力。其中包括优惠、返现、免单、代金券等模块，承载了公司内部各接入的产品线的线上和线下推广活动。
 
-通用的横向的支付营销平台，为全公司内部的各产品线提供支付能力。其中包括优惠、返现、免单、代金券等模块，承载了公司内部各接入的产品线的线上和线下推广活动。
+* 2.产品建设：规划恒生活产品全景。产品覆盖：C端(恒生活 APP /货柜小程序),B端(恒掌柜 APP/PC)，运营(众包，统一运营，进销存，OMS 等等)
+
+* 3.技术建设：设计和落地恒生活业务中台和应用服务架构体系，确保业务需求快速落地；技术决策和攻关；建立系统质量和安全保障机制
+
+* 4.项目推动:恒生活 APP ，到家项目，涅槃项目(新货柜 Saas)，金融租赁和钱包，供应链系统(采销&OMS)，货柜迁移按期上线
 
 
 
@@ -118,3 +135,12 @@ tags:
 * 为公司核心产品(SAAS CRM)提供数据、自动化营销、用户画像、会员运营报表等功能 项目职责： 1.负责 CRM数据侧产品与应用架构设计 2.通过数据提升 CRM产品的精准性及用户体验 项目业绩： 1. 主导 CRM数据侧产品设计及实现，为商户营销部门提供数据分析支撑 2. 优化帐户、权限、CRM订单系统架构设计实现微服务化 3. 为 CRM添加 Drools规则引擎，实现商户复杂业务营销逻辑配置化，提升运营效率 4. 运营报表产品设计，包括卡、券、会员、流失模型、降频模型等 5. 通过大数据(Kylin) 机器学习做用户画像提升营销精准性，降低成本，增强用户体验 6. 实现 2家大型商户的 SAAS 的私有化布署
 * 通过大数据提升营销分析系统的效率 项目职责： 1.负责业务及商家数据分析对接 2.整体大数据架构设计及组件选型 项目业绩： 1. 数据仓库分层及 CRM业务多维建模 2. 基于 Flume、Sqoop、Hadoop、Kylin、Hive构建 ETL 及数据仓库， 3. 通过 Presto 为数据分析师即席查询，提升数据集成效率 4. Flink做流式计算提供近实时报表
 * 原数据仓库模型性能问题低下、数据不准确等问题，需对其进行重构 项目职责： 1、多维仓库模型开发；编写 SQL及 tcl脚本按主题进行数据抽取及汇总 2、经营分析(Portal 门户)相关的开发工作，及前端开发 项目业绩： 1． 梳理原有仓库模型(客户、渠道、交易、财务)，依据中国移动业务进行多维建模 2． 参与数据仓库分层架构(ODS、DWD、DWS、DWT、ADS)设计 3． ETL脚本及数仓事实表、维表开发，由 Teradata迁移至 IBM小型机(DB2) 4． 经营分析门户(Portal)前端后端开发与部署，保证前端系统的稳定运行。
+
+## 技术
+
+* 三个平台都采用 Spring Cloud 微服务架构技术，主要使用 Spring Cloud（Eureka （注册中心）、Config （配置中心）、Feign+Ribbon （服务调用）、Zuul （网关）、zipkin (链路跟踪)）
+* 时空大数据平台采用混合数据仓库技术，支持各类智慧城市建设中需要的各类数据的汇聚，采用的数据库包括 Hbase、PostgreSQL、MongoDB\ NFS、FastDFS、Elasticsearch、Mysql ，数据汇聚工具包括 Kettle、Nifi ，时空大数据平台部分采用 Spring Cloud 微服务技术+Docker 容器化，当前开始使用K8服务编排进行部署。
+* 物联网平台采用 Netty 技术，支持国家 AMQP、JMS、RELASTICSEARCHT/HTTP、COAP、DDS、MQTT 六大物联网通信协议，连接全渠道网路通信；并对各种传感器数据做统一管理，协议类型在协议库中动态维护及增长；保证多源异构的物联网数据接入、存储、智能分析。物联网流式数据使用 Spark 流式计算引擎进行转换，数据存储使用 ES 进行存储。
+* 技术tag：django、mysql、redis、rabittmq、PHP、jsonrpc、swoole、Lua、nginx、supervisor、fabric、go、beego、kafka.
+* 1：重构老平台运营活动管理模块 2：数据迁移 3：WPHP架构架构维护 4：新平台中支付系统的构建研发 5: 赚呗(活期产品)从0到1的实现
+* 网利科技是一家P2P公司，线上系统涵盖录标、审核、风控、结算、用户中心、支付、运营活动等七大模块，在职期间参与了老平台的维护（python），新平台的开发（php）、老系统向新系统的平滑过渡、老数据的迁移、校验、主导支付子系统的开发（包括支付渠道对接、支付路由、支付后台管理、数据一致性）及赚呗活期的系统构建；以下五部分为在网利期间的工作内容概述：
