--- a/source/_posts/面试/简历备份.md
+++ b/source/_posts/面试/简历备份.md
@@ -36,7 +36,7 @@ tags:
 
 * 基于NamingService+loopback IP的流量劫持，相比社区iptables方案性能更好，且可支持服务治理参数透明劫持 协议通用代理架构，新协议开发成本减少5倍以上 Envoy转发性能优化，利用bRPC底层高性能网格和IO机制对Envoy性能进行优化，转发提升性能2倍以上 代理架构简化，支持client-side代理模式，比社区both-side模式资源开销和延迟减半，还支持Proxyless模式 Istio控制面性能优化，支撑十万级实例规模 高级服务治理策略，包括错误码调权、动态备份请求等，大幅提升了服务可用性 个人于2021年7月百度技术沙龙发表《服务网格在百度核心业务大规模实践》演讲，线上线下观众近千人。文章被InfoQ等多家媒体收录。
 
-* 百度内部大多数服务已经微服务化，通过RPC框架（bRPC、RAL、UB等）来实现服务与服务之间的通信。但RPC框架存在以下问题： 1. 服务治理策略重复开发：由于每个语言有不同的框架，有的语言甚至有多个框架，每个框架都需要重复开发如**超时重试、服务发现、负载均衡、限流熔断等服务治理策略** 2. 框架升级困难：因为框架被联编到业务进程中，框架升级需要业务配合升级，但实践证明往往很难推动所有业务升级老版本框架 3. 跨框架调用无法有效联动：如分布式Tracing、全链路灰度等治理能力需要上下游框架之间遵守相同的协议和行为模式但不同框架的行为很难统一 4. 配置管理分散：服务间拓扑关系和各种治理策略配置分散在各处（如写死的代码，或者本地配置文件），无法统一管理 百度服务网格作为第二代微服务方案，解决了上述问题： 1. 建立统一数据平面，将服务治理能力抽取到独立的Sidecar进程，从而实现语言无关、框架无关，并可以独立于业务进程进行升级 2. 建立统一控制平面，统一管理管理服务间拓扑关系和各种治理策略配置，并向数据面下发这些配置 3. 百度服务网格基于开源的Istio+Envoy方案，做了大量改进： 基于NamingService+loopback IP的流量劫持，相比社区iptables方案，性能更好，且可支持服务治理参数透明劫持 协议通用代理架构，使dubbo协议复用大量http协议的治理策略，新协议开发成本减少5倍以上 Envoy转发性能优化，利用bRPC底层高性能网格和IO机制对Envoy性能进行优化，转发提升性能2倍以上 代理架构简化，支持client-side代理模式，比社区both-side模式资源开销和延迟减半，还支持Proxyless模式 Istio控制面性能优化，**支撑十万级实例规模 高级服务治理策略，包括错误码调权、动态备份请求等**，大幅提升了服务可用性 2021年7月百度技术沙龙发表《服务网格在百度核心业务大规模实践》演讲，线上线下观众近千人。文章被InfoQ等多家媒体收录。
+* 百度内部大多数服务已经微服务化，通过RPC框架（bRPC、RAL、UB等）来实现服务与服务之间的通信。但RPC框架存在以下问题： 1. 服务治理策略重复开发：由于每个语言有不同的框架，有的语言甚至有多个框架，每个框架都需要重复开发如**超时重试、服务发现、负载均衡、限流熔断等服务治理策略** 2. 框架升级困难：因为框架被联编到业务进程中，框架升级需要业务配合升级，但实践证明往往很难推动所有业务升级老版本框架 3. 跨框架调用无法有效联动：**如分布式Tracing、全链路灰度**等治理能力需要上下游框架之间遵守相同的协议和行为模式但不同框架的行为很难统一 4. 配置管理分散：服务间拓扑关系和各种治理策略配置分散在各处（如写死的代码，或者本地配置文件），无法统一管理 百度服务网格作为第二代微服务方案，解决了上述问题： 1. 建立统一数据平面，将服务治理能力抽取到独立的Sidecar进程，从而实现语言无关、框架无关，并可以独立于业务进程进行升级 2. 建立统一控制平面，统一管理管理服务间拓扑关系和各种治理策略配置，并向数据面下发这些配置 3. 百度服务网格基于开源的Istio+Envoy方案，做了大量改进： 基于NamingService+loopback IP的流量劫持，相比社区iptables方案，性能更好，且可支持服务治理参数透明劫持 协议通用代理架构，使dubbo协议复用大量http协议的治理策略，新协议开发成本减少5倍以上 Envoy转发性能优化，利用bRPC底层高性能网格和IO机制对Envoy性能进行优化，转发提升性能2倍以上 代理架构简化，支持client-side代理模式，比社区both-side模式资源开销和延迟减半，还支持Proxyless模式 Istio控制面性能优化，**支撑十万级实例规模 高级服务治理策略，包括错误码调权、动态备份请求等**，大幅提升了服务可用性 2021年7月百度技术沙龙发表《服务网格在百度核心业务大规模实践》演讲，线上线下观众近千人。文章被InfoQ等多家媒体收录。
 
 * 业绩：
 
@@ -52,7 +52,7 @@ tags:
 
 4.
 
-* 1、**完成架构升级，系统可承载亿级 PV、100万级并发等高并发，并整体性能提升10倍以上**   2、 全面负责研发团队人才梯度团队建设及团队执行力提升，构建高效的团队；连续2年交付无延期 3、 基于 SpringCloud、Gin 基础框架，提升复用性；基于 **Nacos、Pinpoint、Zabbix、ELK 等服务治理 ** 4、 Devops 规划与落地(Jenkins、Sonar、Gitlab、Nexus、Ansible等)、基于K8S容器化云原生改造 5、 C端营销体系搭建支撑公司的业务发展战略；交易中台业务系统支撑多渠道收单； 6、 基于机器学习搜索推荐落地；基于图计算的流量识别与产品优化； 7、 理解 CEO 的业务发展战略，负责产研体系统匹配公司业务发展；
+* 1、**完成架构升级，系统可承载亿级 PV、100万级并发等高并发，并整体性能提升10倍以上**   2、 全面负责研发团队人才梯度团队建设及团队执行力提升，构建高效的团队；连续2年交付无延期 3、 基于 SpringCloud、Gin 基础框架，提升复用性；基于 **Nacos、Pinpoint、Zabbix、ELK 等服务治理 ** 4、 Devops 规划与落地(Jenkins、Sonar、Gitlab、Nexus、Ansible等)、基于K8S容器化云原生改造 5、**C端营销体系搭建支撑公司的业务发展战略** ；交易中台业务系统支撑多渠道收单； 6、 基于机器学习搜索推荐落地；基于图计算的流量识别与产品优化； 7、 理解 CEO 的业务发展战略，负责产研体系统匹配公司业务发展；
 
 负责通用支付、营销平台的设计与开发，并负责保障系统的性能与稳定性，提升支付成功率、降低掉单率等，以确保可以为产品线提供更坚实可靠的服务。2014年1月，由于在跨团队积极合作方面杰出的表现，荣获第一季百度最佳合伙人，是公司对自己的一份相当的重要的肯定。期间还因程序质量颇佳，程序Bug数极少，多次获得LBS最佳质量奖。
 
@@ -120,6 +120,20 @@ tags:
 
 * 4.项目推动:恒生活 APP ，到家项目，涅槃项目(新货柜 Saas)，金融租赁和钱包，供应链系统(采销&OMS)，货柜迁移按期上线
 
+* 输出技术方案，跟踪组内开发人员达成。
+
+* 关注前沿技术，结合业务完成技术选型与推进。
+
+* 内部服务基础组件设计。
+
+* 团队代码CR ,技术分享，
+
+* 备战，保障大促
+
+* 持续改进 和优化业务，保证系统的高可用
+
+* 制定相关技术开发规范，参与制定技术标准。并对通用技术进行整理，提高技术复用。
+
 
 
 
@@ -128,10 +142,10 @@ tags:
 
 * 项目职责： 1. 业务系统领域划分 2. 架构升级设计与实施 3. 保证在升级过程中业务系统稳定性 项目业绩： 1. 引入微服务治理体系：APM(skywalking)、网关(Gateway)、注册中心(Nacos)、应用监 控(Promethos+Grafana+Thanos)、 2. 统一基础框架，实现各小组重用基础组件，提升开发效率 3. 数据一致性治理:分布式事务、消息一致性、缓存一致性 4. 架构升级后，一个拆分为 30+数据库, 50+子系统，保障系统的稳定性
 * 搭建自研直播系统，降低三方服务成本、提升服务体验 项目职责： 1. 负责直播系统的架构设计 2. 拓课直播迁移至自研以降低成本 3. 降低网络延迟，提升服务体验 项目业绩： 1. 通过 SRS(C++)二次开发，实现基于 RTMP/flv的后端服务 2. Android及 iOS APP端采用 ffmpeg、ijkplayer 实现推拉流 3. 通过 CDN加速，多 CDN提供链路保障 4. 回放点播
-* 需要搭建运维体系、CICD提高研发测试效能 项目职责： 1. 运维人员招聘与管理 2. 构建运维体系,保障基础设施稳定性 3. 构建 CICD,提升研发效能 项目业绩： 1. SRE：监控、CMDB、跳板机、日志 FLK、SQL审核 2. Mysql、Redis、RocketMQ、Kafka等中间件高可用 3. 安全：渗透测试、入侵检测、waf、防火墙 4. CICD: gitlabCI、ArgoCD、Helm、Promethos/Grafana、告警平台 5. 云原生: K8s、Docker、calico、Coredns、Harbor、CRD/Operator 6. 合规: 欧美数据法律合规，实施单元化 Set布署架构设计与实施
+* **需要搭建运维体系、CICD提高研发测试效能 项目职责： 1. 运维人员招聘与管理 2. 构建运维体系,保障基础设施稳定性 3. 构建 CICD,提升研发效能 项目业绩： 1. SRE：监控、CMDB、跳板机、日志 FLK、SQL审核 2. Mysql、Redis、RocketMQ、Kafka等中间件高可用 3. 安全：渗透测试、入侵检测、waf、防火墙 4. CICD: gitlabCI、ArgoCD、Helm、Promethos/Grafana、告警平台 5. 云原生: K8s、Docker、calico、Coredns、Harbor、CRD/Operator 6. 合规: 欧美数据法律合规，实施单元化 Set布署架构设计与实施**
 * 搭建数据中台为整个公司供数据支撑 项目职责： 1. 搭建数据中台 2. 提供业务报表及数据产品 3. 通过监控、优化等方法保障系统稳定性 项目业绩： 1. 建立运营业务指标体系，统一口径: 用户运营、活动运营、渠道运营等 2. 建立管理&财务报表 3. 提供运营报表、管理报表、用户画像、推荐系统、用户分级等数据产品 4. 数据中台架构设计(数据汇聚、数据治理、数据血缘、数据质量、数据安全、分层等) 5. 通过 Flink、Kafka、Clickhouse、Doris 搭建实时数仓 6. 通过 Hadoop、Hive、Presto、Spark、ElasticSearch、Airflow、Atlas、Superset 提 供离线及即席查询、报表、数据血缘等
 * 1、 提升整体性能及数据准确性 2、 开发效率慢，上线减少 bug 率 项目职责： 1. 负责 B端(履约端)系统的整体架构设计 2. 保证履约端系统的稳定性 3. 重构系统以实现研发快速响应业务需求 项目业绩： 1. 引入 Flowable 工作流引擎、Drools规则引擎提升开发效率 2. 通过 ClickHouse 提升查询效率 3. 基于 DDD系统拆分成 50+系统，实现系统松耦合 4. 商家侧(合同、营销、结算等)重构，保证其稳定性 5. 采购、仓储等业务流程梳理与子系统优化 6. 三级库存架构设计，实现库存系统松耦合 7. 搭建订单、商品等中台系统，承接达令家、达令心选、全球好货等多业务模式 8. ERP、运营平台、商品系统(商品、品类、类目)、运营报表 9. 接入发票、客服、IM、物流等三方子系统，形成信息流、物流闭环
-* 项目职责： 1. 保障 C端整个系统在日常促销及双 11、618等大促等高并发场景下的系统稳定性 2. 提升研发效率，实现快速迭代 项目业绩： 1． 梳理 C端业务及流程，并依据 DDD将系统微服务化，系统拆分成 40+松耦合的子系统 2． 通过分库分表、多级缓存、DB冷热分离、服务无状态化来提升系统的伸缩性，扩展性 3． 交易系统(库存、用户、OMS 等)提升 10+倍，优惠券、活动、价格等 QPS提升 100+倍 4． 风控系统识别灰产用户，规则可视化配置、用户检测、反作弊、预警、流程监控 5． 搜索推荐：召回，粗排，精排子系统设计 6． ABTest测试平台架构设计 7． 实现整体业务系统的同城双活
+* 项目职责： 1. 保障 C端整个系统在日常促销及双 11、618等大促等高并发场景下的系统稳定性 2. 提升研发效率，实现快速迭代 项目业绩： 1． 梳理 C端业务及流程，并依据 DDD将系统微服务化，系统拆分成 40+松耦合的子系统 2．**通过分库分表、多级缓存、DB冷热分离、服务无状态化来提升系统的伸缩性**，扩展性 3． 交易系统(库存、用户、OMS 等)提升 10+倍，优惠券、活动、价格等 QPS提升 100+倍 4． 风控系统识别灰产用户，规则可视化配置、用户检测、反作弊、预警、流程监控 5． 搜索推荐：召回，粗排，精排子系统设计 6． ABTest测试平台架构设计 7． 实现整体业务系统的同城双活
 * 为公司核心产品(SAAS CRM)提供数据、自动化营销、用户画像、会员运营报表等功能 项目职责： 1.负责 CRM数据侧产品与应用架构设计 2.通过数据提升 CRM产品的精准性及用户体验 项目业绩： 1. 主导 CRM数据侧产品设计及实现，为商户营销部门提供数据分析支撑 2. 优化帐户、权限、CRM订单系统架构设计实现微服务化 3. 为 CRM添加 Drools规则引擎，实现商户复杂业务营销逻辑配置化，提升运营效率 4. 运营报表产品设计，包括卡、券、会员、流失模型、降频模型等 5. 通过大数据(Kylin) 机器学习做用户画像提升营销精准性，降低成本，增强用户体验 6. 实现 2家大型商户的 SAAS 的私有化布署
 * 通过大数据提升营销分析系统的效率 项目职责： 1.负责业务及商家数据分析对接 2.整体大数据架构设计及组件选型 项目业绩： 1. 数据仓库分层及 CRM业务多维建模 2. 基于 Flume、Sqoop、Hadoop、Kylin、Hive构建 ETL 及数据仓库， 3. 通过 Presto 为数据分析师即席查询，提升数据集成效率 4. Flink做流式计算提供近实时报表
 * 原数据仓库模型性能问题低下、数据不准确等问题，需对其进行重构 项目职责： 1、多维仓库模型开发；编写 SQL及 tcl脚本按主题进行数据抽取及汇总 2、经营分析(Portal 门户)相关的开发工作，及前端开发 项目业绩： 1． 梳理原有仓库模型(客户、渠道、交易、财务)，依据中国移动业务进行多维建模 2． 参与数据仓库分层架构(ODS、DWD、DWS、DWT、ADS)设计 3． ETL脚本及数仓事实表、维表开发，由 Teradata迁移至 IBM小型机(DB2) 4． 经营分析门户(Portal)前端后端开发与部署，保证前端系统的稳定运行。
