--- a/source/_posts/面试/简历框架.md
+++ b/source/_posts/面试/简历框架.md
@@ -57,15 +57,17 @@ tags:
   *  GMV多少
   *  重构公司C端系统，使代码更加规范，扩展性更好，部署更加容易。
   *   完成架构升级，系统可承载亿级 PV、100万级并发等高并发，并整体性能提升10倍以上
+  *    C端营销体系搭建支撑公司的业务发展战略
 
 * 内容：
 
-  * 种草社区
-
+  * 负责
+* 负责通用支付、营销平台的设计与开发，并负责保障系统的性能与稳定性，提升支付成功率、降低掉单率等
+    * 备战，保障大促
+* 种草社区
   * 美妆直播种草平台
-
-  * 大促订单 ，支付
-
+* 大促订单 ，支付
+  
     *  活动
        * 秒杀
        * 预售
@@ -74,7 +76,15 @@ tags:
        * 满减满赠
        * ERP系统
        * 物流发货报关 接ERP
-
+    *  技术：
+       *  针对秒杀等高并发场景有过深刻的思考和实践，针对不同场景做过很多优化，用消息队列方式缓冲大促高并发订单压力，订单发号器机制优化解决秒杀并发问题，大促商品信息缓冲预热(解决缓存DB数据一致性问题)以及订单库存缓存优化设计解决库存中存在的诸多问题。
+       *  针对不同类型的订单处理采用策略模式，订单多重活动规则验证采用责任链模式，使用订单中心以任务方式控制订单状态和流转，用RocketMQ事务消息方式来解耦订单主副流程。同时对redis分布式锁进行了封装优化，使用分布式锁解决分布式系统一致性问题。
+       *  交易中心采用抽象工厂模式实现可横向扩展可插拔，实现交易、对账、监测、通知等功能 ，异步方式实现 支付，退款 ，部分退款，结算 等功能。 同步、异步、定时任务 等方式实现交易的最终一致性。采用分布式事务、RocketMQ延迟消息 等方式实习下单支付流程。
+       *  使用ES 实现商品推荐功能，ES+PG 实现不同类型订单筛选
+       *  订单按用户分库分表，DB冷热分离，多级缓存 提高并发能力，减少DB检索压力。ES聚合 实现多种场景查询统计。
+       *  ELCK 实现 服务日志收集，查看，并输出日志规范后，实现自定义自动化报警通知。
+       *  使用 阿里 sentinel 实现服务限流监控  ，采用hystrix 对服务进行熔断降级，防止雪崩提升集群可用性。 
+  *  技术栈：rokectMQ,kafka,PostGrId,mysql,mongodb,ElasticSearch,sentinel,hystrix，pinpoint,
   * 金融账单体系
 
     
@@ -94,11 +104,22 @@ tags:
 
   * 提升驾驶体验
   * 全流程风险管控，实时保障车辆行驶安全。安全态势预测，威胁实时监控
+  * 构建高效的团队
+  * 
 
 * 内容：
 
+  * 系统规划，新人培养，Code Review ，流程规范（SOP ）起草，项目复盘，疑难问题攻关
+  * 通用的横向的支付营销平台，为全公司内部的各产品线提供支付能力。其中包括优惠、返现、免单、代金券等模块，承载了公司内部各接入的产品线的线上和线下推广活动。
+  * 技术决策和攻关；建立系统质量和安全保障机制
+  * 内部服务基础组件设计。
+  * 团队代码CR ,技术分享，
+  * 搭建数据中台，通过汽车IOT设备上报车辆信息，供下游服务使用
   * 车联网/手机互联
   * 智能驾驶
+    * 技术：
+      * taos时序数据库车辆检测数据
+      * 数据中台
   * 小梦同学
   * 驾驶预警
   * 汽车生活(车载多媒体)
@@ -108,28 +129,55 @@ tags:
   * B端车机销售平台(201808-201905)
 
     * 内容
+      * 
       * 移动端，小程序，订单，活动，销售统计，各级代理
-    * 技术亮点：
-
+  * 技术亮点：
+      * 从无到有设计搭建公司微服务基础架构,现已上线并稳定运行。包括用户中心、商品、汽车中心、积分、商城等
+    * 完成基于 Pinpoint APM 监控系统的构建与分享，对接告警系统
+  
   * 汽车生活(201905-202008)
-
+  
     * 内容
       * 汽车移动设备一体化
       * 智能驾驶
-      * 小梦小梦
+    * 小梦小梦
       * 驾驶预警
-    * 技术亮点
-
+      * 
+  * 技术亮点
+      * 基于 ffmpeg 做短视频平台
+    * ， 下属人数：8人 
+    
     
 
 千方科技2020.09- 至今
 
 * type：智慧交通，智慧路网，交通大数据
+
 * 业绩：
-  * 云平台从零搭建，从无到有设计搭建公司微服务基础架构，经过几个版本的迭代已经相对完善稳定
-  * 办公效率提升
-  * 项目年收入1500W+。
+  * 全面负责 研发效能平台整体架构设计，研发，落地，提升办公效率数倍，并以产品形式支持ToB输出。
+  * 自主研发设计智能路口 云边端一体化架构，云边端数据协同一致，整合智能路口相关业务应用形式安装部署，增加复用性 扩展性 ，规范性，项目年收入1500W+。
+  * 支撑物联网平台搭建，并负责保障系统的性能与稳定性，连接全渠道网路通信，承载众多核心数据（路况，灯态，车辆轨迹，雷达）的线上上千实例上亿流量接入
+  * 从无到有设计搭建公司云端微服务基础架构，经过几个版本的迭代已经相对完善稳定。
+  * 支持敏捷云平台开发，建设，稳定运行，参与云原生相关技术的落地工作。
+
+  
+
 * 内容：
+  
+  * 负责研发效能平台，敏捷云，物联网平台，统一权限认证平台，智能路口系统的设计研发落地。
+  * 负责系统功能模块设计，拆分，程序设计，工作分配，研发计划及跟进，日常问题处理等
+  * 持续改进 和优化业务，保证系统的高可用
+  * 制定相关技术开发规范，参与制定技术标准。
+  *  统一基础框架，实现各小组重用基础组件，提升开发效率 。
+  * 负责协调阿里云EDAS产品部署私有云以及相关软服务提供商的商务合作
+  * 引入 Flowable 工作流引擎、Drools规则引擎提升开发效率
+  * 物联网平台对接华为，威尔逊，等多家端雷达数据接入，支撑上亿流量数据，并保证稳定运行。
+  * 服务端招聘专人之一
+  
+  
+  
+  
+  
   * devops: 研发效能平台
     * 还作为产品形式支持ToB输出
   * 敏捷云
@@ -139,22 +187,27 @@ tags:
     * 承载众多核心数据（路况，灯态，车辆轨迹，雷达）的线上上千实例上亿流量接入
   * 云边端
     * 智能路口
+  
 * 项目：
   * 研发效能平台(2020.09-2021.10)
+    * 职位：项目负责人
     * 内容
       * 人员效能管理：项目，需求，任务缺陷
       * devops:  主机,docker,k8s ,构建 部署 
       * git 
       * 镜像，二进制制品
     * 技术：超时重试、服务发现、负载均衡、限流熔断等服务治理策略
-    * 技术栈：elasticsearch,kafka,SpringCloud,nacos,mongoDb,mysql,jenkins,Prometheus,redis,xx-job，Gitlab、Nexus ，harbor
+    * 引入微服务治理体系：APM(skywalking)、网关(Gateway)、注册中心(Nacos)、应用监 控(Promethos+Grafana+Thanos)、
+    * 技术栈：elasticsearch,kafka,SpringCloud,nacos,mongoDb,mysql,jenkins,Prometheus,redis,xx-job，Gitlab、Nexus ，harbor,hystrix,skywalking，FastDFS，minio
   * 敏捷云(202110-202210)
     * 内容：
       * 容器管理
       * 微服务治理
       * 集群监控
       * 中间件管理
-    * 技术：云平台从零搭建
+    * 技术：
+      * 云平台从零搭建
+      * Promethos/Grafana、告警平台 
   * 统一认证&权限平台(2021.7-2021.11)
     * 技术
   * 物联网平台(2021.11-2022.04)
@@ -162,6 +215,7 @@ tags:
       * 规则引擎
       * 流程引擎
     * 技术
+      * 物联网平台采用 Netty 技术，支持国家 AMQP、JMS、RELASTICSEARCHT/HTTP、COAP、DDS、MQTT 六大物联网通信协议，连接全渠道网路通信；并对各种传感器数据做统一管理，协议类型在协议库中动态维护及增长；保证多源异构的物联网数据接入、存储、智能分析。物联网流式数据使用 Spark 流式计算引擎进行转换，数据存储使用 ES 进行存储。
   * 智能路口(2022.04-至今)
     * 内容
       * 信号控制系统
