--- a/source/_posts/面试/简历框架.md
+++ b/source/_posts/面试/简历框架.md
@@ -164,19 +164,19 @@ tags:
 
 * 内容：
   
-  * 负责研发效能平台，敏捷云，物联网平台，统一权限认证平台，智能路口系统的设计研发落地。
-  * 负责系统功能模块设计，拆分，程序设计，工作分配，研发计划及跟进，日常问题处理等
-  * 持续改进 和优化业务，保证系统的高可用
-  * 制定相关技术开发规范，参与制定技术标准。
-  *  统一基础框架，实现各小组重用基础组件，提升开发效率 。
-  * 负责协调阿里云EDAS产品部署私有云以及相关软服务提供商的商务合作
-  * 引入 Flowable 工作流引擎、Drools规则引擎提升开发效率
-  * 物联网平台对接华为，威尔逊，等多家端雷达数据接入，支撑上亿流量数据，并保证稳定运行。
-  * 服务端招聘专人之一
+  1. 负责研发效能平台，敏捷云，物联网平台，统一权限认证平台，智能路口系统的设计研发落地。
+  2. 负责系统功能模块设计，拆分，程序设计，工作分配，研发计划及跟进，日常问题处理等
+  3. 持续改进 和优化业务，保证系统的高可用
+  4. 制定相关技术开发规范，参与制定技术标准。
+  5. 统一基础框架，实现各小组重用基础组件，提升开发效率 。
+  6. 负责协调阿里云EDAS产品部署私有云以及相关软服务提供商的商务合作
+  7. 引入 Flowable 工作流引擎、Drools规则引擎提升开发效率
+  8. 物联网平台对接华为，惠尔视等多家端雷达数据接入，支撑上亿流量数据，并保证稳定运行。
+  9. 服务端招聘专人之一
   
   
   
-  
+  ------作废	
   
   * devops: 研发效能平台
     * 还作为产品形式支持ToB输出
@@ -191,35 +191,76 @@ tags:
 * 项目：
   * 研发效能平台(2020.09-2021.10)
     * 职位：项目负责人
-    * 内容
+    * 项目介绍：
+    * 项目指责
       * 人员效能管理：项目，需求，任务缺陷
       * devops:  主机,docker,k8s ,构建 部署 
       * git 
       * 镜像，二进制制品
-    * 技术：超时重试、服务发现、负载均衡、限流熔断等服务治理策略
+    * 关键技术：超时重试、服务发现、负载均衡、限流熔断等服务治理策略
     * 引入微服务治理体系：APM(skywalking)、网关(Gateway)、注册中心(Nacos)、应用监 控(Promethos+Grafana+Thanos)、
     * 技术栈：elasticsearch,kafka,SpringCloud,nacos,mongoDb,mysql,jenkins,Prometheus,redis,xx-job，Gitlab、Nexus ，harbor,hystrix,skywalking，FastDFS，minio
+    
   * 敏捷云(202110-202210)
-    * 内容：
+    
+    * 职位：
+    * 项目介绍：
       * 容器管理
       * 微服务治理
       * 集群监控
       * 中间件管理
-    * 技术：
+    * 项目指责：
+      * 
+    * 关键 技术：
       * 云平台从零搭建
       * Promethos/Grafana、告警平台 
+    
   * 统一认证&权限平台(2021.7-2021.11)
-    * 技术
+    * 技术	
+  
   * 物联网平台(2021.11-2022.04)
-    * 内容
+  
+    * 职位：
+  
+    * 项目介绍
+  
       * 规则引擎
       * 流程引擎
+  
+    * 项目职责
+  
+      
+  
     * 技术
       * 物联网平台采用 Netty 技术，支持国家 AMQP、JMS、RELASTICSEARCHT/HTTP、COAP、DDS、MQTT 六大物联网通信协议，连接全渠道网路通信；并对各种传感器数据做统一管理，协议类型在协议库中动态维护及增长；保证多源异构的物联网数据接入、存储、智能分析。物联网流式数据使用 Spark 流式计算引擎进行转换，数据存储使用 ES 进行存储。
+  
   * 智能路口(2022.04-至今)
-    * 内容
-      * 信号控制系统
-      * 信号优化系统
-    * 技术
+  
+    * 职位： 资深后段研发工程师
+  
+      
+  
+    * 项目介绍
+  
+      只能路口项目针对
+  
+    * 项目职责
+  
+      * 负责智能路口整体架构设计，支撑云(ctfo-cloud)-边(ECU)-端(信号机,远程机箱等)一体化架构，设计通用型框架，路口系统实现组件化，产品化，可定制化
+  
+      * 负责智能路口下信号控制平台架构设计，研发（CCU，TMS，TCS，1049服务端/客户端 等）支持多方信号机，检测器，灯态，车流量数据 接入。
+  
+      * 负责智能路口下搭建信号优化平台，接入AI模型，通过AI模型模拟路口车流状况，智能生成多种业界业界先进路口实施方案应对路口多种场景，优化路口车人流情况数倍，并在北京(朝阳，顺义)，重庆，成都，无锡等多城市接入投入使用。
+  
+        
+  
+    * 项目业绩：
+  
+      * 1. 引入微服务治理体系：APM(skywalking)、网关(Gateway)、注册中心(Nacos)、应用监 控(Promethos+Grafana+Thanos)、 
+        2. 2. 统一基础框架，实现各小组重用基础组件，提升开发效率
+  
+    * 关键技术
       * (公司自研)云边端一体化架构
+  
+      
 
